--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,9 @@ p a:hover {
 	padding: 0 0 30px;
 	text-align: center;
 }
+#text-main {
+
+}
 #body h1 {
 	color: #fff;
 	display: inline;
@@ -150,9 +153,13 @@ p a:hover {
 	border: 2px solid #1a1a1a;
 	display: block;
 	list-style: none;
-	margin: 0 0 13px;
+	/*margin: 0 0 13px;*/
 	overflow: hidden;
 	padding: 0;
+	float: left;
+	margin: 0 10px 20px;
+	padding: 0;
+	width: 300px;
 }
 #body div ul li .figure {
 	border-right: 2px solid #1a1a1a;
@@ -407,4 +414,8 @@ p a:hover {
 }
 #footer div ul li #pinterest:hover {
 	background-position: -44px -132px;
+}
+
+.search-form {
+	float: right;
 }
