--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-/* Website Template by freewebsitetemplates.com */
+
+
 @font-face {
 	font-family: 'poller_oneregular';
 	src: url('../fonts/pollerone/pollerone-webfont.eot');
@@ -80,6 +81,10 @@ p a:hover {
 }
 #header ul li a:hover, #header ul li.selected a {
 	color: #0ba39c;
+}
+
+div#customiser.container {
+	text-align: center;
 }
 #body {
 	margin: 0;
